Fixed word-wrap on IE, Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -22,15 +22,16 @@ html {
 
 body {
   text-rendering: optimizeSpeed;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  width: 100%; }
 
 p {
   max-width: 66ch;
   line-height: 1.7;
   hyphens: auto;
-  word-break: break-all;
   /* Non standard for webkit */
   word-break: break-word;
+  -ms-word-wrap: break-word;
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
   hyphens: auto; }
@@ -101,7 +102,8 @@ ul {
   background-image: url("../media/goodidea.jpeg");
   padding: 5vh 0 10vh 0;
   background-size: cover;
-  background-position: 40% 20%; }
+  background-position: 40% 20%;
+  width: 100%; }
 
 .hero-intro {
   display: block;
@@ -114,6 +116,7 @@ ul {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
+  word-wrap: break-word;
   font-size: 2rem; }
 
 .navigation {
@@ -145,7 +148,7 @@ ul {
   text-decoration: none;
   color: #c6c6c6; }
 
-section[class*="projectCardContainer"] {
+div[class*="projectCardContainer"] {
   margin: 0 auto;
   width: 100%;
   height: 40vh;
@@ -442,7 +445,7 @@ section[class*="projectCardContainer"] {
     margin-bottom: 4rem;
     padding: 0; }
 
-  section[class*="projectCardContainer"] {
+  div[class*="projectCardContainer"] {
     width: calc(100%/2);
     height: 50vh;
     float: left;
